RESOLVED FIXED109105
ASSERT(!m_findPageOverlay) in FindController.cpp after r140769
https://bugs.webkit.org/show_bug.cgi?id=109105
Summary ASSERT(!m_findPageOverlay) in FindController.cpp after r140769
Enrica Casucci
Reported 2013-02-06 16:39:56 PST
http://trac.webkit.org/changeset/140769 changed the way the overlay is destroyed, therefore the assert is no longer valid.
Attachments
Patch (1.46 KB, patch)
2013-02-06 16:44 PST, Enrica Casucci
thorton: review+
Enrica Casucci
Comment 1 2013-02-06 16:44:13 PST
Tim Horton
Comment 2 2013-02-09 21:57:40 PST
Note You need to log in before you can comment on or make changes to this bug.