ASSERT(!m_findPageOverlay) in FindController.cpp after r140769. https://bugs.webkit.org/show_bug.cgi?id=109105.

Reviewed by Tim Horton.

In r140769 we changed the way the overlay is destroyed,
therefore the assert is no longer valid and should be removed.

* WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::updateFindUIAfterPageScroll):



Canonical link: https://commits.webkit.org/127303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142055 268f45cc-cd09-0410-ab3c-d52691b4dbfc